@@ -96,3 +96,8 @@ fixed: bad msf handling
 
 *2020-01-26
 changed: mode 2 logs
+
+*2023-03-09
+added: argument "Type"
+fixed: detecting SecuROM
+changed: Visual Studio 2022
